--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.generate-ddl=false
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.datasource.url=jdbc:postgresql://37.77.106.162:5432/postgres
+spring.datasource.username=admin
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
