--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#spring.jpa.generate-ddl=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.datasource.url=jdbc:postgresql://37.77.106.162:5432/postgres
@@ -7,3 +6,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=metrics, prometheus
+#management.endpoint.health.show-details=always
